--- a/trunk/configs/templates/K2P.config
+++ b/trunk/configs/templates/K2P.config
@@ -120,6 +120,8 @@ CONFIG_FIRMWARE_INCLUDE_PARTED=n
 ### Include SMB3.6 (and WINS) server. ~1.5MB
 CONFIG_FIRMWARE_INCLUDE_SMBD=n
 
+CONFIG_FIRMWARE_INCLUDE_SMARTDNS=y
+
 ### Include WINS server only. ~0.4MB
 CONFIG_FIRMWARE_INCLUDE_WINS=n
 
